[gd_scene load_steps=8 format=3 uid="uid://dosk5ag1kmxb7"]

[ext_resource type="Script" uid="uid://b3tov4304gnbg" path="res://megaspit.gd" id="1_v0yrn"]
[ext_resource type="Texture2D" uid="uid://y8fcniw36n1u" path="res://Enemies/slime.png" id="2_t2ki0"]

[sub_resource type="Animation" id="Animation_4ep3j"]
resource_name = "spit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_ephwa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5vws6"]
resource_name = "explode"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_500x2"]
_data = {
&"RESET": SubResource("Animation_ephwa"),
&"explode": SubResource("Animation_5vws6"),
&"spit": SubResource("Animation_4ep3j")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mmoqc"]
radius = 12.0

[node name="megaspit" type="Node2D"]
script = ExtResource("1_v0yrn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_t2ki0")
hframes = 8
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_500x2")
}

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_mmoqc")

[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
